Simplify plugin path

--- a/samples/classic.html
+++ b/samples/classic.html
@@ -13,7 +13,7 @@
 			toolbar: 'undo redo | bold italic underline | wproofreader',
 			license_key: 'gpl',
 			external_plugins: {
-				wproofreader: 'http://localhost:5000/dist/plugin.min.js'
+				wproofreader: '../dist/plugin.min.js'
 			},
 			wproofreader: {
 				serviceProtocol: 'http',
